working on getting the self.cluster_indexes to iterate correctly

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,7 @@
     "    def __init__(self, \n",
     "                 cluster_job_name, \n",
     "                 n_cpus_list, \n",
+    "                 ram_limit_in_GB,\n",
     "                 input_file_names,\n",
     "                 output_parent_dir,\n",
     "                 function_to_process,\n",
@@ -51,6 +52,7 @@
     "        reload(logging)\n",
     "        self.cluster_job_name = cluster_job_name\n",
     "        self.n_cpus_list = n_cpus_list\n",
+    "        self.ram_limit_in_GB = ram_limit_in_GB\n",
     "        self.output_parent_dir = output_parent_dir\n",
     "        self.input_file_names = input_file_names\n",
     "        self.function_to_process = lambda kwargs: function_to_process(**kwargs)\n",
@@ -105,8 +107,8 @@
     "        self.logger_ram_usage = logging.getLogger('ram_usage')\n",
     "        self.logger_ram_usage.propagate = False\n",
     "        \n",
-    "    def profile_memory_for_cluster(self, jth_cluster): # RAM in GB\n",
-    "        cluster_pids = self.client_dict[jth_cluster][:].apply_async(os.getpid).get()\n",
+    "    def profile_memory_for_cluster(self, cluster_id): # RAM in GB\n",
+    "        cluster_pids = self.client_dict[cluster_id][:].apply_async(os.getpid).get()\n",
     "        return sum(psutil.Process(pid).memory_info().rss for pid in cluster_pids) / 1e9\n",
     "        \n",
     "    def profile_memory_for_all_clusters(self):\n",
@@ -117,12 +119,11 @@
     "                datetime.now(), jth_cluster, self.cluster_RAM_use_dict[jth_cluster]))\n",
     "        self.logger_ram_usage.info('{}: All clusters uses {} GB of RAM'.format(\n",
     "                datetime.now(), sum(self.cluster_RAM_use_dict.values())))\n",
-    "        # if all clusters are dead, then raise Error with a message\n",
-    "            \n",
-    "    def early_kill_cluster(self, jth_cluster):\n",
-    "        pass\n",
     "        \n",
-    "    \n",
+    "    def clear_memory_on_cluster(self, cluster_id):\n",
+    "        import gc\n",
+    "        self.client_dict[cluster_id][:].apply_async(gc.collect)\n",
+    "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
     "        self.logger_status.info(\"\\tAttempting to start cluster job \"\n",
     "                \"{}'s {}th cluster with {} CPUs\".format(self.cluster_job_name, cluster_id, n_cpus))\n",
@@ -159,22 +160,42 @@
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
     "        # client.purge_everything()\n",
     "        self.client_dict[cluster_id].close()\n",
+    "        self.client_dict.pop(cluster_id)\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
     "        self.logger_status.info('\\t\\tCluster successfully killed')\n",
+    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        time.sleep(5) # hard-coded\n",
-    "        # have to mutate cluster_indexes\n",
     "        \n",
     "    def kill_all_clusters(self):\n",
     "        self.end_time = datetime.now()\n",
     "        self.logger_status.info('Killing all clusters')\n",
-    "        for cluster_id in self.client_dict:\n",
+    "        for cluster_id in sorted(self.client_dict):\n",
     "            self.kill_cluster(cluster_id)\n",
     "        self.logger_status.info('All clusters have been killed')\n",
     "        self.logger_status.info('Multiple Cluster Engine shut down at {}'.format(self.end_time))\n",
     "        self.logger_status.info('Processed {} files in {} minutes'.format(\n",
     "            len(self.input_file_names), (self.end_time - self.start_time).seconds / 60.0))\n",
     "        logging.shutdown()\n",
-    "\n",
+    "        \n",
+    "    def early_kill_cluster(self, cluster_id):\n",
+    "        self.logger_failure.info(('Killing {}{} which was processing file {} '\n",
+    "            'due to exceeding RAM limit').format(self.cluster_job_name, \n",
+    "             cluster_id, self.file_to_cluster_order_dict[cluster_id]))\n",
+    "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
+    "        self.load_balanced_view_dict.pop(cluster_id)\n",
+    "        self.client_dict[cluster_id].close()\n",
+    "        self.client_dict.pop(cluster_id)\n",
+    "        time.sleep(5)\n",
+    "        \n",
+    "    def kill_cluster_if_ram_limit_exceeded(self):\n",
+    "        # only kills at max 1 cluster per method call\n",
+    "        if sum(self.cluster_RAM_use_dict.values()) > self.ram_limit_in_GB:\n",
+    "            cluster_id = sorted(self.cluster_RAM_use_dict, \n",
+    "                                 key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n",
+    "            self.early_kill_cluster(cluster_id)\n",
+    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
+    "        assert len(self.load_balanced_view_dict) != 0, 'All clusters have been killed prematurely'\n",
+    "        \n",
     "    def create_kwargs_dict_list(self, input_file_name, cluster_id, n_cpus):\n",
     "        function_kwargs_dict = copy.deepcopy(self.function_kwargs_dict)\n",
     "        function_kwargs_dict.update({'input_file_name': input_file_name,\n",
@@ -204,13 +225,12 @@
     "            for jth_cluster in self.cluster_indexes: # infinite loop\n",
     "                time.sleep(1) # hard coded delay time; want to do expected log time lag\n",
     "                ### insert code here to kill cluster if RAM usage too great, \n",
-    "                ###       if possible log which file it was processing;\n",
-    "                self.profile_memory_for_all_clusters()                \n",
+    "                self.profile_memory_for_all_clusters()\n",
+    "                self.kill_cluster_if_ram_limit_exceeded()\n",
     "                \n",
-    "                if (not self.async_results_dict[jth_cluster][-1:] \n",
+    "                if (not self.async_results_dict[jth_cluster][-1:]\n",
     "                    or self.async_results_dict[jth_cluster][-1].done()): # check if cluster i is available                       \n",
-    "                    # if necessary, recreate engine here if cluster shut down\n",
-    "                    # clear cluster memory\n",
+    "                    self.clear_memory_on_cluster(jth_cluster)\n",
     "                    self.check_if_function_in_cluster_failured(jth_cluster) # check if previous file failed to process\n",
     "                    \n",
     "                    if jth_cluster == 0: # Send large files to large cluster (ALWAYS has id == 0)\n",
@@ -267,11 +287,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mce.async_results_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# time between profiles\n",
+    "# write RAM failure"
+   ]
   },
   {
    "cell_type": "code",
@@ -282,15 +312,6 @@
    "outputs": [],
    "source": [
     "class MultipleClusterEnginePrototype(object):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        self.RAM_limit_in_GB = pass   \n",
-    "\n",
-    "    def memory_profiler():\n",
-    "        pass # if all clusters are dead, then raise Error with a message\n",
-    "        \n",
-    "    def early_kill(): # when RAM too high, kill heaviest RAM hogging cluster\n",
-    "        pass # write file to failure disk, maybe also cluster i and num_cpus # RAM overload\n",
-    "    \n",
     "    def cluster_release_memory():\n",
     "        # after each map/reducer step, use gc.collect()\n",
     "        pass"
@@ -304,14 +325,10 @@
    },
    "outputs": [],
    "source": [
-    "if cluster is killed, then cannot trust jth_cluster index--instead of load_balanced_list, use load_balanced_dict\n",
-    "\n",
-    "# check if all engines killed\n",
-    "# RAM logger\n",
+    "# if necessary, recreate engine here if cluster shut down\n",
     "# figure out queue vs deque; deque is better\n",
     "# # write a crap load of documentation\n",
-    "# write shell script for configuration and installation\n",
-    "# probably no async or threading required"
+    "# write shell script for configuration and installation"
    ]
   },
   {
@@ -342,6 +359,158 @@
    "outputs": [],
    "source": [
     "https://github.com/donnemartin/data-science-ipython-notebooks/tree/master/mapreduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "class Temp0(object):\n",
+    "    def __init__(self):\n",
+    "        self.load_balanced_view_dict = {i: 1 for i in range(5)}\n",
+    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
+    "        self.cluster_indexes_updated = False\n",
+    "        \n",
+    "    def mutate_cluster_indexes(self, i):\n",
+    "        if i == 3:\n",
+    "            self.load_balanced_view_dict = {5: 1, 6: 1, 7: 1}\n",
+    "            self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
+    "        return i\n",
+    "        \n",
+    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
+    "        \n",
+    "    def generator(self):\n",
+    "        def gen():\n",
+    "            for i in self.cluster_indexes:\n",
+    "                yield i\n",
+    "        gen1 = gen()\n",
+    "        while True:\n",
+    "            if self.cluster_indexes_updated == True:\n",
+    "                gen1 = gen()\n",
+    "                self.cluster_indexes_updated = False\n",
+    "            temp_value = next(gen1)\n",
+    "            if temp_value == 3: # do a mutation\n",
+    "                self.load_balanced_view_dict = {5: 1, 6: 1, 7: 1}\n",
+    "                self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
+    "                self.cluster_indexes_updated = True\n",
+    "            return temp_value\n",
+    "    \n",
+    "    def incrementer(self):\n",
+    "        for i in self.cluster_indexes:\n",
+    "            print(self.mutate_cluster_indexes(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp0 = Temp0()\n",
+    "#temp0.incrementer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "class Temp2(object):\n",
+    "    def __init__(self):\n",
+    "        self.load_balanced_view_dict = {i: 1 for i in range(5)}\n",
+    "        self.cluster_indexes = None\n",
+    "        self.cluster_indexes_updated = False\n",
+    "        \n",
+    "    def mutate_cluster_indexes(self, i):\n",
+    "        if i == 3:\n",
+    "            self.load_balanced_view_dict = {5: 1, 6: 1, 7: 1}\n",
+    "            self.cluster_indexes_updated = True\n",
+    "        return i        \n",
+    "        \n",
+    "    def cluster_indexes_generator(self):\n",
+    "        def gen_in_gen():            \n",
+    "            def gen_in_gen_in_gen():\n",
+    "                for i in itertools.cycle(sorted(self.load_balanced_view_dict)):\n",
+    "                    yield i\n",
+    "            actual_gen = gen_in_gen_in_gen()\n",
+    "            while True:\n",
+    "                if self.cluster_indexes_updated:\n",
+    "                    actual_gen = gen_in_gen_in_gen()\n",
+    "                    self.cluster_indexes_updated = False            \n",
+    "                yield next(actual_gen)            \n",
+    "        return gen_in_gen()\n",
+    "    \n",
+    "    def safe_incrementer(self):\n",
+    "        self.cluster_indexes = self.cluster_indexes_generator()\n",
+    "        for i in self.cluster_indexes:\n",
+    "            self.mutate_cluster_indexes(i)\n",
+    "            print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp2 = Temp2()\n",
+    "#temp2.safe_incrementer()"
    ]
   }
  ],
