memory profiler and early cluster kill almost working

--- a/sanity_check_tests.ipynb
+++ b/sanity_check_tests.ipynb
@@ -283,15 +283,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:46<00:00,  4.68s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
@@ -321,12 +313,299 @@
     "    }\n",
     "\n",
     "mce3 = MultipleClusterEngine(**mce_args)\n",
-    "mce3.main()"
+    "#mce3.main()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function kill_cluster_if_ram_limit_exceeded called\n",
+      "dict_values([0.180105216, 0.133926912, 0.09367552, 32.29243392]) 20.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ad96d92563a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmce3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_cluster_output_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmce3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmce3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mrun_clusters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    207\u001b[0m                 \u001b[0;31m### insert code here to kill cluster if RAM usage too great,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprofile_memory_for_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 209\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_cluster_if_ram_limit_exceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m                 \u001b[0mjth_cluster\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_indexes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mkill_cluster_if_ram_limit_exceeded\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    170\u001b[0m             cluster_id = sorted(self.cluster_RAM_use_dict, \n\u001b[1;32m    171\u001b[0m                                  key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n\u001b[0;32m--> 172\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mearly_kill_cluster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'killing cluster{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_indexes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcycle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_balanced_view_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mearly_kill_cluster\u001b[0;34m(self, cluster_id)\u001b[0m\n\u001b[1;32m    157\u001b[0m         self.logger_failure.info(('Killing {}{} which was processing file {} '\n\u001b[1;32m    158\u001b[0m             \u001b[0;34m'due to exceeding RAM limit'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_job_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 159\u001b[0;31m              cluster_id, self.file_to_cluster_order_dict[cluster_id][-1]))\n\u001b[0m\u001b[1;32m    160\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclient_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcluster_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ipcluster stop --profile={}{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_job_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "mce3.create_cluster_output_dir()\n",
+    "mce3.start_all_clusters()\n",
+    "mce3.run_clusters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(mce3.cluster_RAM_use_dict, key=mce3.cluster_RAM_use_dict.get, reverse=True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-d9e3cd25b14f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmce3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfile_to_cluster_order_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "mce3.file_to_cluster_order_dict[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function kill_cluster_if_ram_limit_exceeded called\n",
+      "dict_values([0.180105216, 0.133926912, 0.09367552, 32.29243392]) 20.0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-332e0bfd573c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmce3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_cluster_if_ram_limit_exceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mkill_cluster_if_ram_limit_exceeded\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    170\u001b[0m             cluster_id = sorted(self.cluster_RAM_use_dict, \n\u001b[1;32m    171\u001b[0m                                  key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n\u001b[0;32m--> 172\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mearly_kill_cluster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'killing cluster{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_indexes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcycle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_balanced_view_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mearly_kill_cluster\u001b[0;34m(self, cluster_id)\u001b[0m\n\u001b[1;32m    157\u001b[0m         self.logger_failure.info(('Killing {}{} which was processing file {} '\n\u001b[1;32m    158\u001b[0m             \u001b[0;34m'due to exceeding RAM limit'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_job_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 159\u001b[0;31m              cluster_id, self.file_to_cluster_order_dict[cluster_id][-1]))\n\u001b[0m\u001b[1;32m    160\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclient_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcluster_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ipcluster stop --profile={}{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_job_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "mce3.kill_cluster_if_ram_limit_exceeded()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mce3.kill_all_clusters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce3.client_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mce3.profile_memory_for_all_clusters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.607870976"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(mce3.cluster_RAM_use_dict.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/zmq/eventloop/ioloop.py\", line 35, in <module>\n",
+      "    from tornado.ioloop import PollIOLoop, PeriodicCallback\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/tornado/ioloop.py\", line 49, in <module>\n",
+      "    from tornado.platform.auto import set_close_exec, Waker\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/tornado/platform/auto.py\", line 39, in <module>\n",
+      "    from tornado.platform.posix import set_close_exec, Waker\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/tornado/platform/posix.py\", line 21, in <module>\n",
+      "    import fcntl\n",
+      "ImportError: /home/ubuntu/anaconda2/envs/py36/lib/python3.6/lib-dynload/fcntl.cpython-36m-x86_64-linux-gnu.so: failed to map segment from shared object: Cannot allocate memory\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/bin/ipcluster\", line 11, in <module>\n",
+      "    load_entry_point('ipyparallel==6.1.1', 'console_scripts', 'ipcluster')()\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/pkg_resources/__init__.py\", line 572, in load_entry_point\n",
+      "    return get_distribution(dist).load_entry_point(group, name)\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/pkg_resources/__init__.py\", line 2755, in load_entry_point\n",
+      "    return ep.load()\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/pkg_resources/__init__.py\", line 2408, in load\n",
+      "    return self.resolve()\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/pkg_resources/__init__.py\", line 2414, in resolve\n",
+      "    module = __import__(self.module_name, fromlist=['__name__'], level=0)\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/ipyparallel/__init__.py\", line 17, in <module>\n",
+      "    from .serialize import *\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/ipyparallel/serialize/__init__.py\", line 5, in <module>\n",
+      "    from .serialize import (\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/ipyparallel/serialize/serialize.py\", line 26, in <module>\n",
+      "    from jupyter_client.session import MAX_ITEMS, MAX_BYTES\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/jupyter_client/session.py\", line 56, in <module>\n",
+      "    from zmq.eventloop.ioloop import IOLoop\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/zmq/eventloop/__init__.py\", line 3, in <module>\n",
+      "    from zmq.eventloop.ioloop import IOLoop\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/zmq/eventloop/ioloop.py\", line 38, in <module>\n",
+      "    from .minitornado.ioloop import PollIOLoop, PeriodicCallback\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/zmq/eventloop/minitornado/ioloop.py\", line 61, in <module>\n",
+      "    from .platform.auto import set_close_exec, Waker\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/zmq/eventloop/minitornado/platform/auto.py\", line 34, in <module>\n",
+      "    from .posix import set_close_exec, Waker\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/zmq/eventloop/minitornado/platform/posix.py\", line 21, in <module>\n",
+      "    import fcntl\n",
+      "ImportError: /home/ubuntu/anaconda2/envs/py36/lib/python3.6/lib-dynload/fcntl.cpython-36m-x86_64-linux-gnu.so: failed to map segment from shared object: Cannot allocate memory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ipcluster stop --profile write_to_file3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3: <ipyparallel.client.client.Client at 0x7f1a31116ba8>}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce3.client_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -336,19 +615,16 @@
        "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
        "              <AsyncMapResult: <lambda>:finished>,\n",
        "              <AsyncMapResult: <lambda>:finished>,\n",
-       "              <AsyncMapResult: <lambda>:finished>,\n",
-       "              <AsyncMapResult: <lambda>:finished>,\n",
-       "              <AsyncMapResult: <lambda>:finished>,\n",
-       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [<AsyncMapResult: <lambda>>],\n",
+       "             2: [<AsyncMapResult: <lambda>:finished>,\n",
        "              <AsyncMapResult: <lambda>:finished>,\n",
        "              <AsyncMapResult: <lambda>:finished>,\n",
        "              <AsyncMapResult: <lambda>:finished>],\n",
-       "             1: [],\n",
-       "             2: [],\n",
-       "             3: []})"
+       "             3: [<AsyncMapResult: <lambda>:finished>]})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,33 +633,6 @@
     "# mce3.kill_all_clusters()\n",
     "mce3.async_results_dict"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mce3.async_results_dict[0][0].done()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
