--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +75,7 @@
     "        self.end_time = None\n",
     "        self.cluster_output_dir = None\n",
     "        self.cluster_RAM_use_dict = {}\n",
+    "        self.cluster_pid_dict = {}\n",
     "\n",
     "    def create_cluster_output_dir(self):\n",
     "        subdirs = [name for name in os.listdir(self.output_parent_dir) if \n",
@@ -108,8 +109,7 @@
     "        self.logger_ram_usage.propagate = False\n",
     "        \n",
     "    def profile_memory_for_cluster(self, cluster_id): # RAM in GB\n",
-    "        cluster_pids = self.client_dict[cluster_id][:].apply_async(os.getpid).get()\n",
-    "        return sum(psutil.Process(pid).memory_info().rss for pid in cluster_pids) / 1e9\n",
+    "        return sum(psutil.Process(pid).memory_info().rss for pid in self.cluster_pid_dict[cluster_id]) / 1e9\n",
     "        \n",
     "    def profile_memory_for_all_clusters(self):\n",
     "        self.cluster_RAM_use_dict.clear()\n",
@@ -138,8 +138,9 @@
     "            except ipp.error.TimeoutError:\n",
     "                attempt_ctr += 1\n",
     "            else:\n",
+    "                self.cluster_pid_dict[cluster_id] = client[:].apply_async(os.getpid).get()\n",
     "                self.logger_status.info('\\t\\tCPU processes ready for action: {}'.format(\n",
-    "                    client[:].apply_async(os.getpid).get()))\n",
+    "                    self.cluster_pid_dict[cluster_id]))\n",
     "                return client\n",
     "            # if there is any other error other than TimeoutError, then the error will be raised\n",
     "            \n",
@@ -156,7 +157,7 @@
     "        \n",
     "    def kill_cluster(self, cluster_id): # use better arguments\n",
     "        self.logger_status.info('\\tAttempting to kill {}{} with CPU processes: {}'.format(\n",
-    "            self.cluster_job_name, cluster_id, self.client_dict[cluster_id][:].apply_async(os.getpid).get()))\n",
+    "            self.cluster_job_name, cluster_id, self.cluster_pid_dict[cluster_id]))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
     "        # client.purge_everything()\n",
     "        self.client_dict[cluster_id].close()\n",
@@ -168,32 +169,35 @@
     "        \n",
     "    def kill_all_clusters(self):\n",
     "        self.end_time = datetime.now()\n",
+    "        n_surviving_clusters = len(self.client_dict)\n",
     "        self.logger_status.info('Killing all clusters')\n",
     "        for cluster_id in sorted(self.client_dict):\n",
     "            self.kill_cluster(cluster_id)\n",
     "        self.logger_status.info('All clusters have been killed')\n",
     "        self.logger_status.info('Multiple Cluster Engine shut down at {}'.format(self.end_time))\n",
-    "        self.logger_status.info('Processed {} files in {} minutes'.format(\n",
-    "            len(self.input_file_names), (self.end_time - self.start_time).seconds / 60.0))\n",
+    "        self.logger_status.info('Processed {} files using {} surviving clusters in {} minutes'.format(\n",
+    "            len(self.input_file_names), n_surviving_clusters, (self.end_time - self.start_time).seconds / 60.0))\n",
     "        logging.shutdown()\n",
     "        \n",
     "    def early_kill_cluster(self, cluster_id):\n",
     "        self.logger_failure.info(('Killing {}{} which was processing file {} '\n",
     "            'due to exceeding RAM limit').format(self.cluster_job_name, \n",
-    "             cluster_id, self.file_to_cluster_order_dict[cluster_id]))\n",
+    "             cluster_id, self.file_to_cluster_order_dict[cluster_id][-1]))\n",
+    "        self.client_dict[cluster_id].close()\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
-    "        self.client_dict[cluster_id].close()\n",
     "        self.client_dict.pop(cluster_id)\n",
-    "        time.sleep(5)\n",
+    "        self.async_results_dict.pop(jth_cluster)\n",
     "        \n",
-    "    def kill_cluster_if_ram_limit_exceeded(self):\n",
-    "        # only kills at max 1 cluster per method call\n",
+    "    def kill_cluster_if_ram_limit_exceeded(self): # only kills at max 1 cluster per method call\n",
+    "        print('function kill_cluster_if_ram_limit_exceeded called')\n",
+    "        print(self.cluster_RAM_use_dict.values(), self.ram_limit_in_GB)\n",
     "        if sum(self.cluster_RAM_use_dict.values()) > self.ram_limit_in_GB:\n",
     "            cluster_id = sorted(self.cluster_RAM_use_dict, \n",
     "                                 key=self.cluster_RAM_use_dict.get, reverse=True)[0]\n",
     "            self.early_kill_cluster(cluster_id)\n",
-    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
+    "            print('killing cluster{}'.format(cluster_id))\n",
+    "            self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        assert len(self.load_balanced_view_dict) != 0, 'All clusters have been killed prematurely'\n",
     "        \n",
     "    def create_kwargs_dict_list(self, input_file_name, cluster_id, n_cpus):\n",
@@ -208,7 +212,7 @@
     "            function_kwargs_dict_list[cpu_id]['cpu_id'] = cpu_id\n",
     "        return function_kwargs_dict_list \n",
     "    \n",
-    "    def check_if_function_in_cluster_failured(self, jth_cluster):\n",
+    "    def check_if_function_in_cluster_failed(self, jth_cluster):\n",
     "        if self.async_results_dict[jth_cluster] == []: # cluster just started, so it\n",
     "            return # doesn't have any files sent to the cluster yet\n",
     "        else:\n",
@@ -216,22 +220,25 @@
     "            if exception:\n",
     "                self.logger_failure.info('{}th cluster has error {} on file {}'.format(\n",
     "                    jth_cluster, exception.args[0], self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
+    "            self.async_results_dict.pop(jth_cluster)\n",
     "                                     \n",
     "    def run_clusters(self):\n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
     "        big_file_ctr = 0\n",
     "        \n",
     "        for ith_file in tqdm(range(len(self.input_file_names))):\n",
-    "            for jth_cluster in self.cluster_indexes: # infinite loop\n",
+    "            while True:\n",
+    "                # for jth_cluster in self.cluster_indexes: # infinite loop\n",
     "                time.sleep(1) # hard coded delay time; want to do expected log time lag\n",
     "                ### insert code here to kill cluster if RAM usage too great, \n",
     "                self.profile_memory_for_all_clusters()\n",
     "                self.kill_cluster_if_ram_limit_exceeded()\n",
+    "                jth_cluster = next(self.cluster_indexes)\n",
     "                \n",
     "                if (not self.async_results_dict[jth_cluster][-1:]\n",
     "                    or self.async_results_dict[jth_cluster][-1].done()): # check if cluster i is available                       \n",
     "                    self.clear_memory_on_cluster(jth_cluster)\n",
-    "                    self.check_if_function_in_cluster_failured(jth_cluster) # check if previous file failed to process\n",
+    "                    self.check_if_function_in_cluster_failed(jth_cluster) # check if previous file failed to process\n",
     "                    \n",
     "                    if jth_cluster == 0: # Send large files to large cluster (ALWAYS has id == 0)\n",
     "                        index = big_file_ctr\n",
@@ -257,14 +264,17 @@
     "\n",
     "        while not all(self.async_results_dict[jth_cluster][-1].done()\n",
     "                      for jth_cluster in self.async_results_dict): # wait for all clusters to finish\n",
-    "            time.sleep(1)\n",
-    "            \n",
+    "            time.sleep(1) # hard coded wait time\n",
+    "            self.profile_memory_for_all_clusters()\n",
+    "            self.kill_cluster_if_ram_limit_exceeded()\n",
+    "            print('ending of while loop body')\n",
+    "                \n",
     "        cluster_set = set()\n",
     "        for jth_cluster in self.cluster_indexes:\n",
     "            if jth_cluster in cluster_set:\n",
     "                break\n",
     "            cluster_set.add(jth_cluster)\n",
-    "            self.check_if_function_in_cluster_failured(jth_cluster)\n",
+    "            self.check_if_function_in_cluster_failed(jth_cluster) # check if last file failed to process\n",
     "        # async_results_dict; save to disk for later inspection?\n",
     "        # take a look at whether the results cache takes too much RAM\n",
     "        \n",
@@ -278,9 +288,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
